<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comgreedyai.github.calculator.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:gravity="right"
            android:layout_gravity="center_vertical|right"
            android:layout_margin="28px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:gravity="right"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="28px"
            android:layout_marginLeft="28px"
            android:layout_marginBottom="28px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/num_7"
            android:onClick="num_7_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_7"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/num_8"
            android:onClick="num_8_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_8"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/num_9"
            android:onClick="num_9_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_9"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/plus"
            android:onClick="plus_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="24sp"
            android:padding="50px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/num_4"
            android:onClick="num_4_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_4"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/num_5"
            android:onClick="num_5_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_5"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/num_6"
            android:onClick="num_6_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_6"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/minus"
            android:onClick="minus_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="24sp"
            android:padding="50px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/num_1"
            android:onClick="num_1_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_1"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/num_2"
            android:onClick="num_2_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_2"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/num_3"
            android:onClick="num_3_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_3"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_0"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/num_0"
            android:onClick="num_0_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_0"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/dot"
            android:onClick="dot_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/equals"
            android:onClick="equals_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            android:textSize="24sp"
            android:padding="50px"/>

        <Button
            android:id="@+id/ce"
            android:onClick="ce_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ce"
            android:textSize="24sp"
            android:padding="50px"/>
    </LinearLayout>

</LinearLayout>